--- a/popup/style.css
+++ b/popup/style.css
@@ -1,32 +1,85 @@
+*
+{
+	/* outline: 1px solid red; */
+}
+
 html, body
 {
 	width: 300px;
 	height: 300px;
-	margin: 1rem;
 	overflow-x: hidden;
 }
 
-span
+#root
 {
-	display: block;
+	margin: 0 .5rem;
 }
 
-.head
+hr
 {
-	font-size: 1.2rem;
+	margin: 0 .5rem .5rem;
+	padding: 0;
+	border: 0;
+	border-bottom: 1px solid lightgray;
 }
 
-.link
+.product-type
 {
-	margin-right: .5rem;
-	border: 1px solid rgba(100, 0, 50);
-	display: inline-block;
-	padding: .25rem;
+	margin: 0 0 1rem;
+}
+
+h1
+{
+	margin: 0 0 1rem;
+	font-size: 1.5rem;
+}
+
+h1.error
+{
+	
+	margin: 0 0 1rem;
+	text-align: center;
+	color: red;
+}
+
+p.error
+{
+	text-align: center;
+	margin: 0 1rem;
+}
+
+input
+{
+	border: 1px solid lightgray;
+	border-radius: .35rem;
+	padding: .5rem;
+	margin: .5rem;
+	font-style: italic;
+}
+
+.hidden
+{
+	/* background-color: yellow; */
+	display: none;
+}
+
+.product-link
+{
+	background-color: lightpink;
 	text-decoration: none;
+	color: black;
+	padding: .25rem .5rem;
+	border-radius: .25rem;
+	border: .2rem solid transparent;
+	transition: border .15s ease-in-out;
 }
 
-.link:hover
+.product-link:not(:last-child)
 {
-	background-color: rgba(100, 0, 50);
-	color: white;
+	margin-right: 1rem;
+}
+
+.product-link:hover
+{
+	border: .2rem solid darkviolet;
 }
