--- a/popup/style.css
+++ b/popup/style.css
@@ -1,85 +1,99 @@
-*
-{
-	/* outline: 1px solid red; */
+html, body {
+  width: 300px;
+  height: 300px;
+  overflow-x: hidden;
 }
 
-html, body
-{
-	width: 300px;
-	height: 300px;
-	overflow-x: hidden;
+.header {
+  margin: 0.5rem 0.5rem 0;
+}
+.header .searchbar {
+  border: 1px solid lightgray;
+  border-radius: 0.35rem;
+  padding: 0.5rem;
+  font-style: italic;
+  width: 100%;
+  margin: 0 0 0.5rem;
+  text-align: center;
+}
+.header .filter {
+  display: flex;
+}
+.header .filter .image,
+.header .filter .video {
+  margin: 0 auto;
+  color: black;
+  border-radius: 0.25rem;
+  border: 0.2rem solid transparent;
+  transition: border 0.15s ease-in-out;
+}
+.header .filter .image:hover,
+.header .filter .video:hover {
+  border: 0.2rem solid darkviolet;
+}
+.header .filter .image label,
+.header .filter .video label {
+  display: block;
+  padding: 0.25rem 0.5rem 0.25rem 1rem;
+  text-indent: -0.5rem;
+}
+.header .filter .image input,
+.header .filter .video input {
+  width: 13px;
+  height: 13px;
+  padding: 0;
+  margin: 0;
+  vertical-align: bottom;
+  position: relative;
+  top: -1px;
+  *overflow: hidden;
+}
+.header hr {
+  margin-bottom: 0.5rem;
+  padding: 0;
+  border: 0;
+  border-bottom: 1px solid lightgray;
 }
 
-#root
-{
-	margin: 0 .5rem;
+#root {
+  margin: 0 0.5rem;
+}
+#root h1 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin: 0 0 1rem 0;
+  padding: 0;
+}
+#root h1:not(.error) {
+  border-bottom: 1px dashed lightgray;
+}
+#root .error {
+  text-align: center;
+}
+#root .error h1 {
+  color: red;
+}
+#root .product-type {
+  margin-bottom: 1rem;
+}
+#root .product-link {
+  background-color: lightpink;
+  text-decoration: none;
+  color: black;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  border: 0.2rem solid transparent;
+  transition: border 0.15s ease-in-out;
+}
+#root .product-link:not(:last-child) {
+  margin-right: 1rem;
+}
+#root .product-link:hover {
+  border: 0.2rem solid darkviolet;
 }
 
-hr
-{
-	margin: 0 .5rem .5rem;
-	padding: 0;
-	border: 0;
-	border-bottom: 1px solid lightgray;
+.hidden {
+  display: none;
 }
 
-.product-type
-{
-	margin: 0 0 1rem;
-}
-
-h1
-{
-	margin: 0 0 1rem;
-	font-size: 1.5rem;
-}
-
-h1.error
-{
-	
-	margin: 0 0 1rem;
-	text-align: center;
-	color: red;
-}
-
-p.error
-{
-	text-align: center;
-	margin: 0 1rem;
-}
-
-input
-{
-	border: 1px solid lightgray;
-	border-radius: .35rem;
-	padding: .5rem;
-	margin: .5rem;
-	font-style: italic;
-}
-
-.hidden
-{
-	/* background-color: yellow; */
-	display: none;
-}
-
-.product-link
-{
-	background-color: lightpink;
-	text-decoration: none;
-	color: black;
-	padding: .25rem .5rem;
-	border-radius: .25rem;
-	border: .2rem solid transparent;
-	transition: border .15s ease-in-out;
-}
-
-.product-link:not(:last-child)
-{
-	margin-right: 1rem;
-}
-
-.product-link:hover
-{
-	border: .2rem solid darkviolet;
-}
+/*# sourceMappingURL=style.css.map */
